sidebar scrollbar bug

--- a/app/assets/stylesheets/hauptwebsite.css.sass
+++ b/app/assets/stylesheets/hauptwebsite.css.sass
@@ -12,6 +12,7 @@ body
   width: 100%
   position: relative
   padding-top: 45px
+  overflow-x: hidden
 
   .right-haupt
     position: relative
